syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc";

service Timeshift {
  rpc GetMediaChunkInformation (TimeShiftRequest) returns (TimeShitResponse) {}

}

message TimeShiftRequest {
  int32 mediaId = 1;
}

message TimeShitResponse {
  int32 mediaId = 1;
  string name = 2;
  string siteName = 3;
  int64 length = 4;
  int32 status = 5;
  string thumbnail = 6;
  int32 projectId = 7;
  string awsBucketWholeMedia = 8;
  string awsStorageNameWholeMedia = 9;
  repeated string keywords = 10;
  int64 createdAt = 11;
  int64 updatedAt = 12;
  string mediaUrl = 13;
  repeated ChunkResolutionResponse data = 14;
}

message ChunkResolutionResponse {
  string resolution = 1;
  repeated ChunkResponse chunks = 2;
}

message ChunkResponse {
  int32 chunkId = 1;
  int32 position = 2;
  string awsBucketName = 3;
  string awsStorageName = 4;
  double length = 5;
  int64 createdAt = 6;
  string chunksUrl = 7;
}